# docs/swagger.json
@@ -56,6 +56,18 @@
                         "description": "size",
                         "name": "size",
                         "in": "query"
+                    },
+                    {
+                        "type": "boolean",
+                        "description": "loadFilms",
+                        "name": "loadFilms",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "name",
+                        "name": "name",
+                        "in": "query"
                     }
                 ],
                 "responses": {
@@ -93,6 +105,12 @@
                         "name": "planetID",
                         "in": "path",
                         "required": true
+                    },
+                    {
+                        "type": "boolean",
+                        "description": "loadFilms",
+                        "name": "loadFilms",
+                        "in": "query"
                     }
                 ],
                 "responses": {
