# internal/controller/planet.go
@@ -1,6 +1,7 @@
 package controller
 
 import (
+	"encoding/json"
 	"fmt"
 	"net/http"
 	"strconv"
@@ -14,10 +15,11 @@ import (
 
 type IPlanetController struct {
 	PlanetService service.PlanetService
+	Host          string
 }
 
 func (impl *IPlanetController) Configure(router *gin.RouterGroup) {
-	router.GET("/planets", impl.FindPlanets)
+	router.GET("/planets", impl.FindPlanetsAndTotal)
 	router.GET("/planets/:planetID", impl.FindPlanetByID)
 	router.DELETE("/planets/:planetID", impl.DeletePlanet)
 }
@@ -29,10 +31,12 @@ func (impl *IPlanetController) Configure(router *gin.RouterGroup) {
 // @Produce json
 // @Param page query int false "page"
 // @Param size query int false "size"
+// @Param loadFilms query bool false "loadFilms"
+// @Param name query string false "name"
 // @Success 200 {object} dto.PlanetsResponse
 // @Failure 500 {object} dto.ApiError
 // @Router /api/planets [get]
-func (impl *IPlanetController) FindPlanets(ctx *gin.Context) {
+func (impl *IPlanetController) FindPlanetsAndTotal(ctx *gin.Context) {
 	page, err := strconv.Atoi(ctx.Query("page"))
 	if err != nil || page < 1 {
 		page = 1
@@ -41,30 +45,57 @@ func (impl *IPlanetController) FindPlanets(ctx *gin.Context) {
 	if err != nil || size < 1 {
 		size = 10
 	}
+	loadFilms := false
+	if ctx.Query("loadFilms") == "true" {
+		loadFilms = true
+	}
 
-	planets, total, err := impl.PlanetService.FindPlanets(ctx, page, size)
+	res, err := impl.PlanetService.FindPlanetsAndTotal(ctx, page, size, loadFilms)
 	if err != nil {
 		ctx.JSON(http.StatusInternalServerError, dto.ApiError{Error: "internal server error"})
 		return
 	}
 
-	data := make([]dto.PlanetDto, len(planets))
-	for i := 0; i < len(planets); i += 1 {
-		// films := make([]dto.FilmDto, len(planets[i].Films))
-		// for j := 0; j < len(planets[i].Films); j += 1 {
-		// 	films[j] = impl.ParseFilmDto(&planets[i].Films[j])
-		// }
+	data := make([]dto.PlanetDto, res.Count)
+	for i := 0; i < len(data); i += 1 {
+		p := res.Data[i]
 
-		data[i] = impl.ParsePlanetDto(&planets[i])
-		// data[i].Films = films
+		var films []dto.FilmDto
+		if p.R != nil && len(p.R.Films) > 0 {
+			films = make([]dto.FilmDto, len(p.R.Films))
+			for j := 0; j < len(p.R.Films); j += 1 {
+				films[j] = impl.ParseFilmDto(p.R.Films[j])
+			}
+		}
+
+		data[i] = impl.ParsePlanetDto(res.Data[i])
+		data[i].Films = films
+	}
+
+	paramSize := ""
+	if size != 10 {
+		paramSize = fmt.Sprintf("&size=%d", size)
+	}
+
+	previous := ""
+	if page > 1 {
+		previous = fmt.Sprintf("%s?page=%d%s", impl.Host, page-1, paramSize)
+	}
+
+	next := ""
+	if res.Next {
+		next = fmt.Sprintf("%s?page=%d%s", impl.Host, page+1, paramSize)
 	}
 
 	ctx.JSON(http.StatusOK, dto.PlanetsResponse{
 		Pagination: dto.Pagination{
-			Count: len(data),
-			Total: total,
+			Count:    len(data),
+			Total:    res.Total,
+			Previous: previous,
+			Next:     next,
 		},
-		Data: data})
+		Data: data,
+	})
 }
 
 // @Summary find planet by id
@@ -73,6 +104,7 @@ func (impl *IPlanetController) FindPlanets(ctx *gin.Context) {
 // @Accept json
 // @Produce json
 // @Param planetID path int true "Planet ID"
+// @Param loadFilms query bool false "loadFilms"
 // @Success 200 {object} dto.PlanetResponse
 // @Failure 400 {object} dto.ApiError
 // @Failure 404 {object} dto.ApiError
@@ -84,23 +116,31 @@ func (impl *IPlanetController) FindPlanetByID(ctx *gin.Context) {
 		ctx.JSON(http.StatusBadRequest, dto.ApiError{Error: "invalid planet id"})
 		return
 	}
+	loadFilms := false
+	if ctx.Query("loadFilms") == "true" {
+		loadFilms = true
+	}
 
-	planet, err := impl.PlanetService.FindPlanetByID(ctx, planetID)
+	planet, err := impl.PlanetService.FindPlanetByID(ctx, planetID, loadFilms)
 	if err != nil {
 		if _, ok := err.(*exception.NotFoundException); ok {
 			ctx.JSON(http.StatusNotFound, dto.ApiError{Error: fmt.Sprintf("planet %d not found", planetID)})
+			return
 		}
 		ctx.JSON(http.StatusInternalServerError, dto.ApiError{Error: "internal server error"})
 		return
 	}
 
-	// films := make([]dto.FilmDto, len(planet.Films))
-	// for j := 0; j < len(planet.Films); j += 1 {
-	// 	films[j] = impl.ParseFilmDto(&planet.Films[j])
-	// }
-
 	data := impl.ParsePlanetDto(planet)
-	// data.Films = films
+
+	var films []dto.FilmDto
+	if planet.R != nil && len(planet.R.Films) > 0 {
+		films = make([]dto.FilmDto, len(planet.R.Films))
+		for j := 0; j < len(planet.R.Films); j += 1 {
+			films[j] = impl.ParseFilmDto(planet.R.Films[j])
+		}
+		data.Films = films
+	}
 
 	ctx.JSON(http.StatusOK, dto.PlanetResponse{Data: data})
 }
@@ -132,13 +172,19 @@ func (impl *IPlanetController) DeletePlanet(ctx *gin.Context) {
 }
 
 func (impl *IPlanetController) ParsePlanetDto(planet *model.Planet) dto.PlanetDto {
+	var climates []string
+	json.Unmarshal(planet.Climates, &climates)
+
+	var terrains []string
+	json.Unmarshal(planet.Terrains, &terrains)
+
 	return dto.PlanetDto{
 		ID:        planet.ID,
 		CreatedAt: planet.CreatedAt.Format("2006-01-02 15:04:05"),
-		UpdatedAt: planet.CreatedAt.Format("2006-01-02 15:04:05"),
+		UpdatedAt: planet.UpdatedAt.Format("2006-01-02 15:04:05"),
 		Name:      planet.Name,
-		// Climates:  planet.Climates,
-		// Terrains:  planet.Terrains,
+		Climates:  climates,
+		Terrains:  terrains,
 	}
 }
 
@@ -148,6 +194,7 @@ func (impl *IPlanetController) ParseFilmDto(film *model.Film) dto.FilmDto {
 		CreatedAt:   film.CreatedAt.Format("2006-01-02 15:04:05"),
 		UpdatedAt:   film.UpdatedAt.Format("2006-01-02 15:04:05"),
 		Title:       film.Title,
+		Episode:     int(film.Episode),
 		Director:    film.Director,
 		ReleaseDate: film.ReleaseDate.Format("2006-01-02"),
 	}
